# chess

./: CMakeLists.txt  README.md
cmake-config/: chess-bench.target.cmake  chess-test.target.cmake  configure-gtest.cmake
cmake-config/modules/: Findbenchmark.cmake
include/chess/: BasicDriver.h  Board.h  Driver.h  Game.h  Loc.h  Move.h  Square.h  Suggester.h  Tree.h  available_moves.h  basic_driver.h  board.h  driver.h  game.h  loc.h  move.h  move_generator.h  piece.h  player.h  random_player.h  square.h
include/chess/pgn/: Lexer.h  MoveParser.h  Parser.h  lexer.h  move_parser.h  parser.h  resolve_move.h  token.h  token_forward.h  tokens.h  validate.h
include/chess/text/: print.h
include/perf/: StackVector.h
src/: CMakeLists.txt  main.cpp
src/applications/: CMakeLists.txt
src/applications/pgn-game-counter/: CMakeLists.txt  main.cpp
src/applications/pgn-game-validator/: CMakeLists.txt  main.cpp
src/applications/pgn-parser/: CMakeLists.txt
src/applications/play/: CMakeLists.txt  main.cpp
src/chess/: BasicDriver.cpp  Board.cpp  CMakeLists.txt  Game.cpp  Loc.cpp  Suggester.cpp  available_moves.cpp  basic_driver.cpp  board.cpp  game.cpp  loc.cpp  move_generator.cpp  random_player.cpp  square.cpp
src/chess/bench/: CMakeLists.txt  available_moves_bench.cpp  suggester_bench.cpp
src/chess/pgn/: CMakeLists.txt  Lexer.cpp  MoveParser.cpp  lexer.cpp  move_parser.cpp  resolve_move.cpp  validate.cpp
src/chess/pgn/test/: CMakeLists.txt  lexer_test.cpp  move_parser_test.cpp  resolve_move_test.cpp  validate_test.cpp
src/chess/test/: CMakeLists.txt  available_moves_test.cpp  driver_mock.h  game_fixture.h  move_bishop_test.cpp  move_general_test.cpp  move_king_test.cpp  move_knight_test.cpp  move_pawn_test.cpp  move_queen_test.cpp  move_rook_test.cpp  player_fixture.h  player_mock.h  square_test.cpp  suggester_test.cpp  tree_test.cpp
src/chess/text/: CMakeLists.txt  print.cpp
src/perf/: CMakeLists.txt  StackVector.cpp
src/perf/test/: CMakeLists.txt  StackVector_test.cpp
